# LLM-for-OR

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md  TOYMODEL.md
configs/experiments/: eval_config.yaml  llm_eval.yaml  llm_eval_all_models.yaml  llm_eval_all_types.yaml  llm_eval_azure.yaml  llm_eval_azure_all.yaml  llm_eval_azure_gpt5.yaml  llm_eval_foundry_all.yaml
configs/models/: api_keys_template.yaml  azure_deployments_template.yaml
configs/training/: dataset_info.json  grpo_config.yaml  qwen3_or_debug_lora.yaml  sft_config.yaml
data/training/: grpo_prompts.jsonl  grpo_prompts_v2.jsonl  grpo_training_ids.txt  sft_failures.json  sft_gpt52chat.json  sft_heuristic.json  sft_qwen_chat.train.jsonl  sft_qwen_chat.val.jsonl  sft_test.json
demo/: quickstart.py
demo/tutorials/: 01_basic_debugging.py
docs/archive/: NeurIPS2026_Agentic_OROM_Portfolio_Report_v2.docx  NeurIPS2026_Research_Directions_Report_ORIGINAL.md
docs/directions/: B_OR_Bias_Bench.md  C_OR_Compliance_Bench.md  SYNERGY_AND_PORTFOLIO.md  TIER1_Overview.md  TIER2_Directions_DEF.md  TIER3_Directions_GH.md
docs/modules/: README.md  agents.md  data_generation.md  environments.md  evaluation.md  solvers.md  utils.md
docs/plan/: PROJECT_PLAN.md
docs/progress/: 2026-01-10_gurobi_interface.md  2026-01-10_project_init.md  2026-01-11_evaluation_demo.md  2026-01-11_llm_agent.md  2026-01-11_mdp_environment.md  2026-01-11_multimodel_eval.md  2026-01-11_saboteur_agent.md  2026-01-12_evaluation_framework.md  2026-01-12_robust_injection.md  2026-01-12_scripts_reorganization.md  2026-01-12_token_tracking_eval.md  2026-01-13_documentation_modularization.md  2026-01-13_grpo_training.md  2026-01-13_model_evaluation.md  2026-01-13_sft_data_collection.md  2026-01-13_sft_training.md  2026-01-13_sglang_deployment.md  2026-01-14_sft_vs_grpo_comparison.md  2026-01-14_sqlite_storage_refactor.md  2026-01-15_grpo_v2_evaluation.md  2026-01-15_phase2_grpo_improvements.md  2026-01-15_randomized_naming_experiment.md  2026-01-15_type_ef_hard_evaluation.md  2026-01-15_type_ghi_mdp_evaluation.md  2026-01-16_dgro_training_results.md  2026-01-16_phase3_difficulty_implementation.md  2026-01-17_phase3.2_da_filtering_results.md  (+2 more)
outputs/: grpo_eval_200.json  grpo_independent_eval_200.partial.json  sft_eval_200.json  sft_eval_test.json  sft_vs_grpo_comparison.md
src/: __init__.py
tests/: conftest.py
(+1758 files in other folders)
